Add: The application level logging config

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -24,3 +24,6 @@ management.endpoint.health.group.liveness.show-details=always
 ## Open-api config
 app.openapi.host=localhost
 app.openapi.port=${server.port}
+
+## App Logging config
+logging.level.io.akikr.app.shared.AppLoggingFilter=DEBUG
