--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,9 @@ management.endpoint.health.probes.enabled=true
 management.health.db.enabled=true
 management.endpoints.web.exposure.include=*
 management.endpoints.web.exposure.exclude=env
+
+## App Logging config
+app.logging.filter.enabled=true
+app.logging.filter.include-request-body=true
+app.logging.filter.include-response-body=true
+app.logging.filter.max-body-length=100000
