--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,6 @@
 services:
   mysql-db:
-    image: 'mysql:8.1.0'
+    image: 'mysql:8.4.8'
     container_name: mysql_db
     environment:
       - 'MYSQL_DATABASE=${DB_NAME}'
@@ -9,16 +9,13 @@ services:
       - 'MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}'
     ports:
       - '3306'
-    volumes:
-      - mysql_data:/var/lib/mysql
-      - ./src/main/resources/db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    restart: always
     healthcheck:
-        test: ['CMD-SHELL', 'mysqladmin ping -h localhost -u $${MYSQL_USER} -p$${MYSQL_PASSWORD}']
-        interval: 30s
-        timeout: 10s
-        retries: 5
-        start_period: 30s
-
-volumes:
-  mysql_data:
-    driver: local
+      test: [ 'CMD-SHELL', 'mysqladmin ping -h localhost -u $${MYSQL_USER} -p$${MYSQL_PASSWORD}' ]
+      interval: 15s
+      timeout: 10s
+      retries: 3
+    volumes:
+      - ./src/main/resources/db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    env_file:
+      - .env
