--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,5 +1,4 @@
 ## Spring DataSource configuration for MySQL
-spring.data.jdbc.dialect=mysql
 spring.datasource.url=jdbc:mysql://${DB_HOST:mysql_db}:3306/${DB_NAME:my_db}?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${DB_USER:my_user}
@@ -12,3 +11,8 @@ spring.datasource.hikari.max-lifetime=60000
 spring.datasource.hikari.keepalive-time=30000
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.auto-commit=true
+
+## Spring JPA / Hibernate configuration
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
