Add: The resquest response models and update the tests
Refactor the code to use DTOs and resquest and response models to maintain command-query segregation

--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
     <scm>
         <tag>HEAD</tag>
         <url>https://github.com/akikr.io/fenix-commerce-app</url>
-        <connection/>
-        <developerConnection/>
+        <connection>scm:git:git://github.com/akikr.io/fenix-commerce-app.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/akikr.io/fenix-commerce-app.git</developerConnection>
     </scm>
 
     <properties>
