--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.profiles.active=mysql
 spring.threads.virtual.enabled=true
 spring.main.lazy-initialization=true
 spring.jpa.open-in-view=false
+spring.jackson.default-property-inclusion=NON_NULL
 
 # Spring docker-compose config
 spring.docker.compose.enabled=true
