Update: The app logging config

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,4 +26,10 @@ app.openapi.host=localhost
 app.openapi.port=${server.port}
 
 ## App Logging config
+app.logging.filter.enabled=true
+app.logging.filter.include-request-body=true
+app.logging.filter.include-response-body=true
+app.logging.filter.max-body-length=10000
+
+## App Logging config
 logging.level.io.akikr.app.shared.AppLoggingFilter=DEBUG
